# PortfolioDev

./: Python.py  Python4.ipynb  README.md  exam.ipynb  feuille 3.py
projets/perso/second-brain/: .dockerignore  .env.example  .gitignore  Dockerfile  OVERVIEW.md  README.md  benchmark_cases.json  main.py  pyproject.toml  requirements.txt
projets/perso/second-brain/.github/workflows/: ci.yml
projets/perso/second-brain/config/: settings.py
projets/perso/second-brain/plugins/: browser_plugin.py  calendar_plugin.py  filesystem_plugin.py  gmail_plugin.py  notion_plugin.py  reminders_plugin.py  spotify_plugin.py  weather_plugin.py
projets/perso/second-brain/src/: goals.py  planner.py  tasks.py
projets/perso/second-brain/src/agent/: __init__.py  adaptive_agent.py  attention.py  base_agent.py  brain_loop.py  coordinator.py  critic_agent.py  execution_agent.py  follow_up.py  insights.py  jarvis.py  notifier.py  optimizer_agent.py  planner_agent.py  prioritization_agent.py  replanning_agent.py  roadmap_agent.py  strategic_agent.py  task_generator.py
projets/perso/second-brain/src/agents_v2/: __init__.py  briefing.py  coordinator.py  executor.py  planner.py  retriever.py
projets/perso/second-brain/src/ai/: llm_client.py  llm_providers.py  rag_pipeline.py  tools.py
projets/perso/second-brain/src/api/: main.py
projets/perso/second-brain/src/core/: __init__.py  errors.py  logging.py  metrics.py  permissions.py
projets/perso/second-brain/src/data_layer/: document_manager.py
projets/perso/second-brain/src/evaluation/: __init__.py  benchmark.py
projets/perso/second-brain/src/ingestion/: __init__.py  pipeline.py
projets/perso/second-brain/src/memory/: conversation.py  graph_memory.py  history.py  user_profile.py  vector_store.py
projets/perso/second-brain/src/modes/: __init__.py  finance.py  study.py
projets/perso/second-brain/src/processing/: chunker.py  embedder.py  parsers.py
projets/perso/second-brain/src/retrieval/: __init__.py  hybrid_search.py  (+1 more)
projets/perso/second-brain/tests/: test_agent.py  test_agents.py  test_core.py  test_integration.py  test_tasks.py  test_tools.py
(+39 files in other folders)
