[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "second-brain"
version = "2.0.0"
description = "Personal AI second brain with RAG, multi-agent system, and local LLM"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Josh" }]
keywords = ["rag", "llm", "second-brain", "ai", "local", "vector-store"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "chromadb>=0.4.24,<0.6",
    "duckduckgo-search>=5.0,<7",
    "fastapi>=0.110,<0.116",
    "flask>=3.0,<4",
    "httpx>=0.27,<1",
    "numpy>=1.26,<3",
    "openpyxl>=3.1,<4",
    "plyer>=2.0,<3",
    "pydantic>=2.5,<3",
    "pymupdf>=1.24,<2",
    "python-docx>=1.1,<2",
    "python-dotenv>=1.0,<2",
    "python-multipart>=0.0.6,<1",
    "python-pptx>=0.6,<1",
    "requests>=2.31,<3",
    "rich>=13.0,<14",
    "sentence-transformers>=2.7,<4",
    "telebot>=0.0.5,<1",
    "uvicorn[standard]>=0.29,<1",
    "watchfiles>=0.21,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
gpu = [
    "sentence-transformers[gpu]>=2.7",
]

[project.scripts]
second-brain = "main:main"
second-brain-api = "src.api.main:app"

[tool.setuptools.packages.find]
include = ["src*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short --strict-markers"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["mon_env", ".venv", "tests"]
